tests/toylang/neg/001201_mutation.toylang
program a = { program a then sleep; } .
